BUG#33257 "range access on partitioned falcon table actually scans entire indexes" - pushbuild fix: when calling $partition_handler->read_range_first() don't   pass the start key if we really didn't have it, pass NULL, as goes per call   convention.